# Medical-Appointment-Scheduling-System

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  steps.txt
app/: models.py  serializers.py  urls.py  views.py
app/management/commands/: insert_data_db.py
app/migrations/: 0001_initial.py
project/: settings.py  urls.py
sh/: download_data_from_kaggle.sh
